<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2026 The LineageOS Project

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        android:key="gamespace_enabled"
        android:defaultValue="true"
        android:title="@string/gamespace_enabled_title"
        android:summary="@string/gamespace_enabled_summary" />

    <ListPreference
        android:key="edge_position"
        android:defaultValue="left"
        android:title="@string/edge_position_title"
        android:entries="@array/edge_position_entries"
        android:entryValues="@array/edge_position_values"
        app:useSimpleSummaryProvider="true" />

    <SwitchPreferenceCompat
        android:key="fps_meter_enabled"
        android:defaultValue="true"
        android:title="@string/fps_meter_title"
        android:summary="@string/fps_meter_summary" />

    <SwitchPreferenceCompat
        android:key="system_meter_enabled"
        android:defaultValue="true"
        android:title="@string/system_meter_title"
        android:summary="@string/system_meter_summary" />

    <SwitchPreferenceCompat
        android:key="compact_notifications"
        android:defaultValue="true"
        android:title="@string/compact_notifications_title"
        android:summary="@string/compact_notifications_summary" />

    <ListPreference
        android:key="call_handling_mode"
        android:defaultValue="off"
        android:title="@string/call_handling_title"
        android:entries="@array/call_handling_entries"
        android:entryValues="@array/call_handling_values"
        app:useSimpleSummaryProvider="true" />

    <Preference
        android:key="game_library"
        android:title="@string/game_library_title"
        android:summary="@string/game_library_summary" />

    <Preference
        android:key="sidebar_apps"
        android:title="@string/sidebar_apps_title"
        android:summary="@string/sidebar_apps_summary" />

    <Preference
        android:key="reset_meter_positions"
        android:title="@string/meter_position_reset_title"
        android:summary="@string/meter_position_reset_summary" />

</PreferenceScreen>
